
2017-07-19  Ron Norman <rjn@inglenet.com>

	* typeck.c, parser.y, tree.h, tree.c:
	  Limit ignoring errors to IF, WHEN and PERFORM UNTIL
	  when the condition is resolved at compile time

2017-07-18  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* parser.y, tree.c: check both increased MAX_FD_RECORD and the new
	  introduced MAX_FD_RECORD_IDX depending on file organization
	* config.c: for -fnot-reserved=word: additional to removing "word"
	  from reserved word list remove "word" from register, system-names
	  and intrinsic function list

2017-07-17  Edward Hart <edward.dan.hart@gmail.com>

	* typeck.c (cb_expr_shift): corrected r1347 - only set expr_lh to NULL
	  if the token in parentheses is a relational expression (see bug #321).

2017-07-17  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* config.c: better handling of empty/comment only lines
	* tree.h, tree.c, typeck.c: added explain_operator and used where
	  appropriate

2017-07-17  Ron Norman <rjn@inglenet.com>

	* tree.c: in cb_build_binary_op provide details on why an
	  expression is always TRUE or FALSE and better indicate which
	  line this happened on
	* tree.c: in cb_build_binary_op check for '@' parens operator
	  with a numeric literal inside the parens

2017-07-14  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* parser.y: only allow RETURNING/GIVING in EXIT PROGRAM/GOBACK
	  if RETURN-CODE register is not disabled; always return 0 on
	  STOP RUN if no RETURN-CODE register is available
	* reserved.c, tree.h: new functions cb_register_list_get_first and
	  cb_register_list_get_next for iterating through all active registers
	* typeck.c: modularize register creation

2017-07-13  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* config.def: added support options cb_move_fig_constant_to_numeric
	  "move-figurative-constant-to-numeric" and cb_move_fig_quote_to_numeric
	  "move-figurative-quote-to-numeric"